cabal-version:      2.4
name:               rewind
version:            0.1.1.0
synopsis:           A CLI tool to downgrade your Pacman package using local cache.
bug-reports:        https://github.com/kyoheiu/rewind
license:            MIT
author:             Kyohei Uto
maintainer:         kyoheiu@outlook.com
extra-source-files: CHANGELOG.md

executable rewind
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    
      base,
      directory,
      text,
      process
    hs-source-dirs:   app
    default-language: Haskell2010
